--- a/index.html
+++ b/index.html
@@ -3,55 +3,222 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>图片滚动展示</title>
+    <title>商青铜神树</title>
     <style>
+        body {
+            margin: 0;
+            padding: 15px;
+            font-family: 'Microsoft YaHei', sans-serif;
+            background-color: #f5f5f5;
+            min-height: 100vh;
+        }
+
+        .title {
+            text-align: center;
+            color: #333;
+            margin: 15px 0;
+            font-size: clamp(20px, 4vw, 28px);
+            font-weight: bold;
+        }
+
         .gallery-container {
             width: 100%;
             overflow-x: auto;
             white-space: nowrap;
-            padding: 20px 0;
-            /* 自定义滚动条样式 */
+            padding: 15px 0;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            margin-bottom: 60px;
             scrollbar-width: thin;
             scrollbar-color: #888 #f1f1f1;
+            -webkit-overflow-scrolling: touch; /* 平滑滚动 */
         }
 
         .gallery-container::-webkit-scrollbar {
-            height: 8px;
+            height: 6px;
         }
 
         .gallery-container::-webkit-scrollbar-track {
             background: #f1f1f1;
+            border-radius: 3px;
         }
 
         .gallery-container::-webkit-scrollbar-thumb {
             background: #888;
-            border-radius: 4px;
+            border-radius: 3px;
         }
 
-        .gallery-container img {
-            width: 300px;  /* 设置统一的宽度 */
-            height: 200px; /* 设置统一的高度 */
-            object-fit: cover; /* 保持图片比例并填充指定区域 */
-            margin-right: 20px;
+        .image-wrapper {
+            display: inline-block;
+            margin-right: 15px;
+            vertical-align: middle;
+            position: relative;
+        }
+
+        .image-wrapper:last-child {
+            margin-right: 0;
+        }
+
+        .zoomable-image {
+            height: clamp(200px, 50vh, 400px); /* 响应式高度 */
+            width: auto;
+            cursor: zoom-in;
+            transition: all 0.3s ease;
             border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        }
+
+        /* 图片放大时的遮罩层 */
+        .zoom-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            z-index: 1000;
+            cursor: zoom-out;
+        }
+
+        .zoomed-image {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            max-width: 90vw;
+            max-height: 90vh;
+            object-fit: contain;
+            z-index: 1001;
         }
 
         .audio-section {
-            margin-top: 20px;
-            padding: 20px;
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 999;
+            width: 90%;
+            max-width: 400px;
+            text-align: center;
+        }
+
+        .play-button {
+            width: 100%;
+            padding: 12px 20px;
+            font-size: clamp(14px, 3vw, 18px);
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        .play-button:hover {
+            background-color: #45a049;
+            transform: translateY(-2px);
+        }
+
+        .play-button.playing {
+            background-color: #f44336;
+        }
+
+        @media (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+
+            .gallery-container {
+                padding: 10px 0;
+            }
+
+            .image-wrapper {
+                margin-right: 10px;
+            }
         }
     </style>
 </head>
 <body>
+    <h1 class="title">商青铜神树</h1>
+    
     <div class="gallery-container">
-        <img src="./image.jpg" alt="图片1">
-        <img src="./image2.jpg" alt="图片2">
+        <div class="image-wrapper">
+            <img src="1.jpg" alt="商青铜神树图1" class="zoomable-image">
+        </div>
+        <div class="image-wrapper">
+            <img src="2.jpg" alt="商青铜神树图2" class="zoomable-image">
+        </div>
+        <div class="image-wrapper">
+            <img src="3.jpg" alt="商青铜神树图3" class="zoomable-image">
+        </div>
+    </div>
+
+    <div id="zoomOverlay" class="zoom-overlay">
+        <img id="zoomedImage" class="zoomed-image">
     </div>
 
     <div class="audio-section">
-        <h3>播放音频</h3>
-        <!-- 在这里添加音频播放器代码 -->
+        <button class="play-button" id="playButton">点击此处听讲解</button>
+        <audio id="audioPlayer">
+            <source src="y_tree.mp3" type="audio/mpeg">
+            您的浏览器不支持音频播放。
+        </audio>
     </div>
+
+    <script>
+        const images = document.querySelectorAll('.zoomable-image');
+        const overlay = document.getElementById('zoomOverlay');
+        const zoomedImage = document.getElementById('zoomedImage');
+        const audio = document.getElementById('audioPlayer');
+        const playButton = document.getElementById('playButton');
+        let isPlaying = false;
+
+        // 图片点击放大
+        images.forEach(img => {
+            img.addEventListener('click', function() {
+                overlay.style.display = 'block';
+                zoomedImage.src = this.src;
+                document.body.style.overflow = 'hidden'; // 防止背景滚动
+            });
+        });
+
+        // 点击遮罩层关闭放大图片
+        overlay.addEventListener('click', function() {
+            this.style.display = 'none';
+            document.body.style.overflow = ''; // 恢复滚动
+        });
+
+        // 音频控制
+        playButton.addEventListener('click', function(e) {
+            e.stopPropagation();
+            if (isPlaying) {
+                audio.pause();
+                this.textContent = '点击此处听讲解';
+                this.classList.remove('playing');
+            } else {
+                audio.play();
+                this.textContent = '点击暂停讲解';
+                this.classList.add('playing');
+            }
+            isPlaying = !isPlaying;
+        });
+
+        // 音频结束时重置状态
+        audio.addEventListener('ended', function() {
+            isPlaying = false;
+            playButton.textContent = '点击此处听讲解';
+            playButton.classList.remove('playing');
+        });
+
+        // 防止移动设备上的滚动问题
+        document.addEventListener('touchmove', function(e) {
+            if (overlay.style.display === 'block') {
+                e.preventDefault();
+            }
+        }, { passive: false });
+    </script>
 </body>
 </html>
