--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商青铜神树</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
             margin: 0;
             padding: 15px;
@@ -29,10 +35,10 @@
             background-color: white;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            margin-bottom: 60px;
+            margin-bottom: 80px;
             scrollbar-width: thin;
             scrollbar-color: #888 #f1f1f1;
-            -webkit-overflow-scrolling: touch; /* 平滑滚动 */
+            -webkit-overflow-scrolling: touch;
         }
 
         .gallery-container::-webkit-scrollbar {
@@ -61,7 +67,7 @@
         }
 
         .zoomable-image {
-            height: clamp(200px, 50vh, 400px); /* 响应式高度 */
+            height: clamp(200px, 50vh, 400px);
             width: auto;
             cursor: zoom-in;
             transition: all 0.3s ease;
@@ -69,7 +75,6 @@
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         }
 
-        /* 图片放大时的遮罩层 */
         .zoom-overlay {
             display: none;
             position: fixed;
@@ -77,7 +82,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.9);
             z-index: 1000;
             cursor: zoom-out;
         }
@@ -100,43 +105,70 @@
             transform: translateX(-50%);
             z-index: 999;
             width: 90%;
-            max-width: 400px;
-            text-align: center;
+            max-width: 600px;
+            background-color: white;
+            padding: 15px;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
 
-        .play-button {
-            width: 100%;
+        .audio-controls {
+            display: flex;
+            gap: 15px;
+            justify-content: center;
+        }
+
+        .play-button, .restart-button {
+            flex: 1;
             padding: 12px 20px;
-            font-size: clamp(14px, 3vw, 18px);
-            background-color: #4CAF50;
+            font-size: clamp(14px, 3vw, 16px);
             color: white;
             border: none;
             border-radius: 25px;
             cursor: pointer;
             transition: all 0.3s ease;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            max-width: 250px;
+        }
+
+        .play-button {
+            background-color: #4CAF50;
+        }
+
+        .restart-button {
+            background-color: #2196F3;
+        }
+
+        .play-button:hover, .restart-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 8px rgba(0,0,0,0.15);
         }
 
         .play-button:hover {
             background-color: #45a049;
-            transform: translateY(-2px);
+        }
+
+        .restart-button:hover {
+            background-color: #1976D2;
         }
 
         .play-button.playing {
             background-color: #f44336;
         }
 
-        @media (max-width: 768px) {
-            body {
-                padding: 10px;
+        @media (max-width: 480px) {
+            .audio-controls {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .play-button, .restart-button {
+                width: 100%;
+                max-width: 100%;
             }
 
             .gallery-container {
-                padding: 10px 0;
-            }
-
-            .image-wrapper {
-                margin-right: 10px;
+                margin-bottom: 140px;
             }
         }
     </style>
@@ -161,7 +193,10 @@
     </div>
 
     <div class="audio-section">
-        <button class="play-button" id="playButton">点击此处听讲解</button>
+        <div class="audio-controls">
+            <button class="play-button" id="playButton">点击此处听讲解</button>
+            <button class="restart-button" id="restartButton">重新播放</button>
+        </div>
         <audio id="audioPlayer">
             <source src="y_tree.mp3" type="audio/mpeg">
             您的浏览器不支持音频播放。
@@ -174,6 +209,7 @@
         const zoomedImage = document.getElementById('zoomedImage');
         const audio = document.getElementById('audioPlayer');
         const playButton = document.getElementById('playButton');
+        const restartButton = document.getElementById('restartButton');
         let isPlaying = false;
 
         // 图片点击放大
@@ -181,17 +217,17 @@
             img.addEventListener('click', function() {
                 overlay.style.display = 'block';
                 zoomedImage.src = this.src;
-                document.body.style.overflow = 'hidden'; // 防止背景滚动
+                document.body.style.overflow = 'hidden';
             });
         });
 
         // 点击遮罩层关闭放大图片
         overlay.addEventListener('click', function() {
             this.style.display = 'none';
-            document.body.style.overflow = ''; // 恢复滚动
+            document.body.style.overflow = '';
         });
 
-        // 音频控制
+        // 播放/暂停按钮功能
         playButton.addEventListener('click', function(e) {
             e.stopPropagation();
             if (isPlaying) {
@@ -204,6 +240,16 @@
                 this.classList.add('playing');
             }
             isPlaying = !isPlaying;
+        });
+
+        // 重新播放按钮功能
+        restartButton.addEventListener('click', function(e) {
+            e.stopPropagation();
+            audio.currentTime = 0;
+            audio.play();
+            isPlaying = true;
+            playButton.textContent = '点击暂停讲解';
+            playButton.classList.add('playing');
         });
 
         // 音频结束时重置状态
